stage 3 No bonuses